--- a/scripts/install
+++ b/scripts/install
@@ -11,7 +11,7 @@ is_public=$YNH_APP_ARG_IS_PUBLIC
 version="0.1.18"
 
 # Source YunoHost helpers
-. /usr/share/yunohost/helpers
+source /usr/share/yunohost/helpers
 
 # Save app settings
 ynh_app_setting_set "$app" is_public "$is_public"
