--- a/scripts/install
+++ b/scripts/install
@@ -22,10 +22,9 @@ sudo yunohost app checkurl "${domain}${path}" -a "$app" \
 # Retrieve sources and install them
 src_path=/var/www/$app
 sudo mkdir -p $src_path
-url=$(curl -s https://api.github.com/repos/duniter/cesium/releases | grep "browser_" | grep "web" | head -1 | cut -d\" -f4)
-wget -nc --quiet $url -P /tmp
-sudo unzip -q /tmp/cesium-*-web.zip -d $src_path
-sudo rm -f /tmp/cesium-*-web.zip
+	# Download, check integrity, uncompress and patch the source from app.src
+    ynh_script_progression --message="Setting up source files..." --time --weight=1
+	ynh_setup_source --dest_dir=$src_path
 sudo chown -R www-data: $src_path
 
 # Modify Nginx configuration file and copy it to Nginx conf directory
