[mod] Remove now useless 'sudo' prefix, all commands are now run as root

--- a/scripts/install
+++ b/scripts/install
@@ -16,22 +16,22 @@ source /usr/share/yunohost/helpers
 ynh_app_setting_set "$app" is_public "$is_public"
 
 # Check domain/path availability
-sudo yunohost app checkurl "${domain}${path}" -a "$app" \
+yunohost app checkurl "${domain}${path}" -a "$app" \
     || ynh_die "Path not available: ${domain}${path}"
 
 # Retrieve sources and install them
 src_path=/var/www/$app
-sudo mkdir -p $src_path
+mkdir -p $src_path
 	# Download, check integrity, uncompress and patch the source from app.src
     ynh_script_progression --message="Setting up source files..." --time --weight=1
 	ynh_setup_source --dest_dir=$src_path
-sudo chown -R www-data: $src_path
+chown -R www-data: $src_path
 
 # Modify Nginx configuration file and copy it to Nginx conf directory
 nginx_conf=../conf/nginx.conf
 sed -i "s@YNH_WWW_PATH@$path@g" $nginx_conf
 sed -i "s@YNH_WWW_ALIAS@$src_path/@g" $nginx_conf
-sudo cp $nginx_conf /etc/nginx/conf.d/$domain.d/$app.conf
+cp $nginx_conf /etc/nginx/conf.d/$domain.d/$app.conf
 
 # If app is public, add url to SSOWat conf as skipped_uris
 if [[ $is_public -eq 1 ]]; then
@@ -40,4 +40,4 @@ if [[ $is_public -eq 1 ]]; then
 fi
 
 # Reload nginx service
-sudo service nginx reload
+service nginx reload
