--- a/scripts/install
+++ b/scripts/install
@@ -68,7 +68,7 @@ ynh_setup_source --dest_dir="$final_path"
 # Permissions files
 #=================================================
 
-chown -R www-data: $src_path
+chown -R www-data: $final_path
 
 # Remove the public access
 ynh_app_setting_delete --app=$app --key=skipped_uris
