--- a/scripts/install
+++ b/scripts/install
@@ -31,7 +31,7 @@ is_public=$YNH_APP_ARG_IS_PUBLIC
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
 #=================================================
-ynh_script_progression --message="Validating installation parameters..." --time --weight=1
+ynh_script_progression --message="Validating installation parameters..."
 
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
@@ -56,7 +56,7 @@ ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
 #=================================================
-ynh_script_progression --message="Setting up source files..." --time --weight=1
+ynh_script_progression --message="Setting up source files..."
 
 # Retrieve sources and install them
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
@@ -76,7 +76,7 @@ ynh_app_setting_delete --app=$app --key=skipped_uris
 #=================================================
 # NGINX CONFIGURATION
 #=================================================
-ynh_script_progression --message="Configuring nginx web server..." --time --weight=1
+ynh_script_progression --message="Configuring nginx web server..."
 
 ### `ynh_add_nginx_config` will use the file conf/nginx.conf
 # Create a dedicated nginx config
@@ -91,14 +91,13 @@ fi
 #=================================================
 # SETUP SSOWAT
 #=================================================
-ynh_script_progression --message="Configuring SSOwat..." --time --weight=1
-
+ynh_script_progression --message="Configuring permissions..."
 
 # If app is public, add url to SSOWat conf as skipped_uris and read-only mode
 if [[ $is_public -eq 1 ]]; then
   # unprotected_uris allows SSO credentials to be passed anyway.
-  ynh_app_setting_set --app=$app --key=unprotected_uris --value="/"
-# activate read-only
+  ynh_permission_update --permission "main" --add "visitors"
+  # activate read-only
   ynh_replace_string --match_string='"readonly": false,' --replace_string='"readonly": true,' --target_file="$final_path/config.js"
 fi
 
