--- a/scripts/install
+++ b/scripts/install
@@ -37,6 +37,9 @@ cp $nginx_conf /etc/nginx/conf.d/$domain.d/$app.conf
 if [[ $is_public -eq 1 ]]; then
   # unprotected_uris allows SSO credentials to be passed anyway.
   ynh_app_setting_set "$app" unprotected_uris "/"
+
+  # activate read-only mode
+  ynh_replace_string --match_string='"readonly": false,' --replace_string='"readonly": true,' --target_file="$src_path/config.js"
 fi
 
 # Reload nginx service
