--- a/scripts/install
+++ b/scripts/install
@@ -1,10 +1,12 @@
 #!/bin/bash
+
 #=================================================
 # GENERIC START
 #=================================================
 # IMPORT GENERIC HELPERS
 #=================================================
 
+source _common.sh
 source /usr/share/yunohost/helpers
 
 #=================================================
@@ -12,7 +14,6 @@ source /usr/share/yunohost/helpers
 #=================================================
 
 ynh_clean_setup () {
-  ### Remove this function if there's nothing to clean before calling the remove script.
   true
 }
 # Exit if an error occurs during the execution of the script
@@ -22,11 +23,11 @@ ynh_abort_if_errors
 # RETRIEVE ARGUMENTS FROM THE MANIFEST
 #=================================================
 
-# Retrieve arguments
-app=$YNH_APP_INSTANCE_NAME
 domain=$YNH_APP_ARG_DOMAIN
 path_url=$YNH_APP_ARG_PATH
 is_public=$YNH_APP_ARG_IS_PUBLIC
+
+app=$YNH_APP_INSTANCE_NAME
 
 #=================================================
 # CHECK IF THE APP CAN BE INSTALLED WITH THESE ARGS
@@ -35,11 +36,7 @@ ynh_script_progression --message="Validating installation parameters..."
 
 final_path=/var/www/$app
 test ! -e "$final_path" || ynh_die --message="This path already contains a folder"
-# Normalize the url path syntax
-path_url=$(ynh_normalize_url_path $path_url)
 
-# Check web path availability
-ynh_webpath_available $domain $path_url
 # Register (book) web path
 ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 
@@ -48,7 +45,6 @@ ynh_webpath_register --app=$app --domain=$domain --path_url=$path_url
 #=================================================
 ynh_script_progression --message="Storing installation settings..."
 
-# Save app settings
 ynh_app_setting_set --app=$app --key=domain --value=$domain
 ynh_app_setting_set --app=$app --key=path --value=$path_url
 ynh_app_setting_set --app=$app --key=is_public --value=$is_public
@@ -58,20 +54,9 @@ ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 #=================================================
 ynh_script_progression --message="Setting up source files..."
 
-# Retrieve sources and install them
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
-	# Download, check integrity, uncompress and patch the source from app.src
-
+# Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source --dest_dir="$final_path"
-
-#=================================================
-# Permissions files
-#=================================================
-
-chown -R www-data: $final_path
-
-# Remove the public access
-ynh_app_setting_delete --app=$app --key=skipped_uris
 
 #=================================================
 # NGINX CONFIGURATION
@@ -89,12 +74,26 @@ then
 fi
 
 #=================================================
+# GENERIC FINALIZATION
+#=================================================
+# SECURE FILES AND DIRECTORIES
+#=================================================
+ynh_script_progression --message="Securing files and directories..."
+
+# Set permissions to app files
+chown -R www-data: $final_path
+
+#=================================================
 # SETUP SSOWAT
 #=================================================
-ynh_script_progression --message="Configuring permissions..."
+ynh_script_progression --message="Configuring SSOwat..."
+
+# Remove the public access
+ynh_app_setting_delete --app=$app --key=skipped_uris
 
 # If app is public, add url to SSOWat conf as skipped_uris and read-only mode
-if [[ $is_public -eq 1 ]]; then
+if [ $is_public -eq 1 ]
+then
   # unprotected_uris allows SSO credentials to be passed anyway.
   ynh_permission_update --permission "main" --add "visitors"
   # activate read-only
