--- a/scripts/install
+++ b/scripts/install
@@ -47,7 +47,6 @@ ynh_script_progression --message="Storing installation settings..."
 
 ynh_app_setting_set --app=$app --key=domain --value=$domain
 ynh_app_setting_set --app=$app --key=path --value=$path_url
-ynh_app_setting_set --app=$app --key=is_public --value=$is_public
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -63,10 +62,8 @@ ynh_setup_source --dest_dir="$final_path"
 #=================================================
 ynh_script_progression --message="Configuring nginx web server..."
 
-### `ynh_add_nginx_config` will use the file conf/nginx.conf
 # Create a dedicated nginx config
 ynh_add_nginx_config
-
 
 if [ "$path_url" != "/" ]
 then
@@ -86,16 +83,13 @@ chown -R www-data: $final_path
 #=================================================
 # SETUP SSOWAT
 #=================================================
-ynh_script_progression --message="Configuring SSOwat..."
-
-# Remove the public access
-ynh_app_setting_delete --app=$app --key=skipped_uris
+ynh_script_progression --message="Configuring permissions..."
 
 # If app is public, add url to SSOWat conf as skipped_uris and read-only mode
 if [ $is_public -eq 1 ]
 then
   # unprotected_uris allows SSO credentials to be passed anyway.
-  ynh_permission_update --permission "main" --add "visitors"
+  ynh_permission_update --permission="main" --add="visitors"
   # activate read-only
   ynh_replace_string --match_string='"readonly": false,' --replace_string='"readonly": true,' --target_file="$final_path/config.js"
 fi
